RESOLVED FIXED250958
[WebGPU] Non-owning getters have the wrong lifetime
https://bugs.webkit.org/show_bug.cgi?id=250958
Summary [WebGPU] Non-owning getters have the wrong lifetime
Myles C. Maxfield
Reported 2023-01-21 17:47:49 PST
[WebGPU] Non-owning getters have the wrong lifetime
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-21 17:48:02 PST
Myles C. Maxfield
Comment 2 2023-01-21 17:54:12 PST
EWS
Comment 3 2023-02-04 22:08:11 PST
Committed 259867@main (6c4c981002fe): <https://commits.webkit.org/259867@main> Reviewed commits have been landed. Closing PR #8936 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.